cmake_minimum_required(VERSION 3.20)
project(aoj)

set(CMAKE_CXX_STANDARD 14)

add_executable(aoj main.cpp ITP1_1_A.cpp ITP1_1_B.cpp ITP1_1_C.cpp ITP1_1_D.cpp ITP1_2_A.cpp ITP1_2_B.cpp ITP1_2_C.cpp ITP1_2_D.cpp ITP1_3_A.cpp ITP1_3_B.cpp ITP1_3_C.cpp ITP1_3_D.cpp ITP1_4_A.cpp ITP1_4_B.cpp IT1_4_C.cpp ITP1_4_C.cpp ITP1_5_A.cpp ITP1_5_B.cpp)
